fix: enable overflow auto for body on mobile screens

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,7 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  overflow: hidden;
 }
 
 ul ul li:nth-child(1) {
@@ -59,6 +60,9 @@ p{
   font-size: 20px;
 }
 @media only screen and (max-width: 600px) {
+  body{
+    overflow: auto;
+  }
   p{
     font-size: 18px;
   }
